--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,17 +1,27 @@
 .header  {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 4px;
 }
 
 ul {
+  display: flex;
+  flex-direction: row;
+  margin: 4px;
+  padding: 4px;
+
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
@@ -20,6 +30,7 @@ a {
   font-size: 22px;
   background: white;
   padding: 8px;
+
   /* this removes the line under the links */
   text-decoration: none;
 }
