--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -8,6 +8,9 @@ img {
 }
 
 .title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
   font-size: 36px;
   font-weight: 900;
 }
@@ -23,4 +26,17 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+}
+
+.box-1, .box-2, .box-3, .box-4 {
+  align-content: center;
+  text-align: center;
+  max-width: 200px;
+  margin-left: 16px;
+  margin-right: 16px;
 }
